ios absolute overflow fix (changed to fixed)

--- a/static/css/global.styl
+++ b/static/css/global.styl
@@ -41,7 +41,7 @@ a
     background linear-gradient(to right, ph-red 2%, mix(#ffffff, ph-red, 10%) 0, ph-red 10%)
 
 .list
-  position absolute
+  position fixed
   top 40px
   left 0
   width 100%
@@ -51,7 +51,7 @@ a
   -webkit-overflow-scrolling touch
 
 .page
-  position absolute
+  position fixed
   top 40px
   left 100%
   width 100%
@@ -64,7 +64,7 @@ a
     border 0
 
 .discussion
-  position absolute
+  position fixed
   top 40px
   left 100%
   width 100%
